k8s/manifests/overlays/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-repair-shop
  labels:
    app: auto-repair-shop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /ping
spec:
  ingressClassName: alb
  rules:
    - host: auto-repair-shop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auto-repair-shop
                port:
                  number: 80
